<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Corrida</string>

    <!-- main -->
    <string name="main_search_nao_button">Cerca il NAO nella rete locale</string>
    <string name="main_join_nao_button">Connettiti ad un NAO remoto</string>

    <!-- join_nao -->
    <string name="join_nao_title">Connettiti ad un NAO remoto</string>
    <string name="join_nao_hostname">Indirizzo di rete:</string>
    <string name="join_nao_port">Porta:</string>
    <string name="join_nao_invalid_port">Porta invalida (deve essere un numero tra 0 e 65535)</string>
    <string name="join_nao_submit">Connettiti</string>

    <!-- search_nao -->
    <string name="search_nao_text" tools:ignore="TypographyEllipsis">Cercando il NAO...</string>

    <!-- insert_name -->
    <string name="insert_name_title">Come ti chiami?</string>
    <string name="insert_name_submit">Avanti</string>

    <!-- start_game -->
    <string name="players_count_title">Numero di giocatori:</string>
    <string name="initial_players_count_value">0</string>
    <string name="start_game_submit">Inizia il gioco!</string>
</resources>
