<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFF176">

        <TextView
            android:id="@+id/form_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/join_nao_title"
            android:textColor="#E53935"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/hostname_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/join_nao_hostname"
            android:textColor="#E53935"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/hostname_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:id="@+id/hostname_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />

        <TextView
            android:id="@+id/port_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/join_nao_port"
            android:textColor="#E53935"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/port_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:padding="10dp" />

        <TextView
            android:id="@+id/port_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />

        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/join_nao_submit"
            android:background="#E53935"
            android:textColor="#FFF176"
            android:textSize="32sp" />

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
