<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#FFF176"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_vertical|center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/players_count_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/players_count_title"
                android:textColor="#E53935"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/players_count_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/initial_players_count_value"
                android:textColor="#E53935"
                android:textSize="40sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <Button
                android:id="@+id/start_game_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E53935"
                android:text="@string/start_game_submit"
                android:textColor="#FFF176"
                android:textSize="32sp" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
